# Land-Ownership

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-docs.yml
data/farm_subsidy_top_bottom/2023/: austria.csv  belgium.csv  bulgaria.csv  croatia.csv  czechia.csv  denmark.csv  estonia.csv  finland.csv  france.csv  germany.csv  greece.csv  hungary.csv  ireland.csv  italy.csv  latvia.csv  lithuania.csv  luxembourg.csv  netherlands.csv  poland.csv  portugal.csv  romania.csv  slovakia.csv  spain.csv  sweden.csv  united_kingdom.csv
data/farm_subsidy_top_bottom/2024/: austria.csv  belgium.csv  bulgaria.csv  croatia.csv  czechia.csv  denmark.csv  estonia.csv  france.csv  (+15 more)
data/global_analysis/: aggregated_schemes.csv  kde_results.pkl  summary_statistics.csv  summary_statistics_per_country.csv
docs/: .gitignore  README.md  conf.py  getting_started.rst  index.rst  make.bat  make.sh  plots.rst  preliminar_analysis.rst
docs/_static/: custom.css
docs/source/: conf.py  contributing.rst  getting_started.rst  index.rst  modules.rst
notebooks/: 26_04_28_Tutorial.ipynb
scripts/: box_plots.py  country_analysis.py  create_plots.py  density_plots.py  europe_map_plots.py  europe_map_plots_new.py  fill_database.py  filter_and_save.py  filter_per_schemes.py  pie_plots.py  scrape.py  table_plots.py  top_bottom_locations.py
shell/: download_gdrive.sh  extract_files.sh  plot_and_launch.sh
src/configurations/: README.md  plot_config.py
src/land_ownership/: measures.py  utils.py
src/land_ownership.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+3 files in other folders)
